--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,9 @@ server.port=${SERVER_PORT:9090}
 # HR-User
 url.hr.user=${HR_USER_HOST:localhost:9000}
 
+# HR-Worker
+url.hr.worker=${HR_WORKER_HOST:localhost:9010}
+
+# HR-Payroll
+url.hr.payroll=${HR_PAYROLL_HOST:localhost:9020}
+
