--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.profiles.active=dev
 
 spring.application.name=bff-ms-hr-system
+
+# Feign Properties
+feign.httpclient.connection-timeout=3000
+feign.httpclient.connection-timer-repeat=4000
